[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/upgrades_controls.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.933333, 0.764706, 0.603922, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.4, 0.223529, 0.192157, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
anti_aliasing = false

[node name="UpgradesMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -779.0
margin_bottom = -582.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 182.0
margin_bottom = 140.0
custom_styles/panel = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 180.0
margin_bottom = 139.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 21.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 132.0
size_flags_vertical = 0

[node name="HealthLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 137.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.4, 0.223529, 0.192157, 1 )
text = "HP Remaining: 100"
align = 1

[node name="Header2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 137.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.4, 0.223529, 0.192157, 1 )
text = "Select your upgrades!
"
align = 1

[node name="SpeedUpgrade" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 137.0
margin_bottom = 101.0
size_flags_vertical = 0

[node name="SpeedLabel" type="Label" parent="CenterContainer/VBoxContainer/SpeedUpgrade"]
margin_right = 90.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.4, 0.223529, 0.192157, 1 )
text = "Speed (-5 HP):
10
"
align = 1

[node name="SpeedIncrease" type="Button" parent="CenterContainer/VBoxContainer/SpeedUpgrade"]
margin_left = 94.0
margin_right = 114.0
margin_bottom = 48.0
text = "+"

[node name="SpeedDecrease" type="Button" parent="CenterContainer/VBoxContainer/SpeedUpgrade"]
margin_left = 118.0
margin_right = 135.0
margin_bottom = 48.0
text = "-"

[node name="ConfirmButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 137.0
margin_bottom = 125.0
text = "Confirm"

[connection signal="pressed" from="CenterContainer/VBoxContainer/SpeedUpgrade/SpeedIncrease" to="." method="_on_SpeedIncrease_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SpeedUpgrade/SpeedDecrease" to="." method="_on_SpeedDecrease_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
